# my_learnings

./: .gitignore  .pre-commit-config.yaml  README.md
C/: ex10.c  ex12.c  ex13.c  ex14.c  ex15_pointers.c  ex6.c  ex7.c  ex9.c
CPP/: C++17_by_example.ipynb  code_beauty_oop.cpp  cpp_threads.cpp  pointers_1.cpp  void_pointer.cpp
CPP/CMake/: .gitignore  README.md
CPP/CMake/module6/my_math/: CMakeLists.txt
CPP/Threads/: .gitignore  1_a_thread_introduction_without_threads.cpp  1_b_thread_introduction_with_threads.cpp  2_a_thread_creation_with_function_pointer.cpp  2_b_thread_creation_with_lambda_function.cpp  2_c_thread_creation_with_functor.cpp  2_d_thread_creation_with_static_member_function.cpp  2_e_thread_creation_with_non_static_member_function.cpp  3_a_join.cpp  3_b_detach.cpp  3_c_no_join_or_detach.cpp  3_join.cpp  4_mutex_in_threading.cpp  5_b_mutex_no_try_lock.cpp  5_mutex_try_lock.cpp  6_std_try_lock.cpp  7_a_timed_mutex_try_lock_for.cpp  7_b_timed_mutex_try_lock_until.cpp  8_a_recursive_mutex_with_recursion.cpp  8_b_recursive_mutex_with_for_loop.cpp  README.md
CPP/UnitTesting/: .gitignore  CMakeLists.txt  README.md  library_code.cpp  main.cpp  test.cpp
CPP/UnitTesting/section_2/: CMakeLists.txt
CPP/UnitTesting/section_3/: CMakeLists.txt  library_code.cpp  library_code.hpp  test_runner.cpp
CPP/UnitTesting/section_3/19_UnitTestStructure/: CMakeLists.txt  main.cpp
CPP/UnitTesting/section_3/24_AssertionsOnStrings/: CMakeLists.txt  library_code.cpp  library_code.hpp  main.cpp  test_runner.cpp
CPP/jupyter_xeus/: README.md
CadQuery/: README.md  example.py
DVC/: README.md
DataScience/: pandas.ipynb
DataScience/data_visualization/: countries.csv  sample_data.csv
GoogleProjectManagement/FoundationsOfProjectManagement/: week_1.md  week_2.md  week_3.md  week_4.md
GoogleProjectManagement/ProjectInitiation-StartingASuccessfulProject/: week_1.md  week_2.md
Jekyll/: staff.html
Jekyll/_includes/: navigation.html
Jekyll/_layouts/: post.html
Jekyll/_posts/: 2018-08-22-kiwifruit.md
Jekyll/_site/: about.html  blog.html  index.html  staff.html
Julia/: 10variables.jl  15PrimitiveCompositeTypes.ipynb  17basic_operations.jl  18_exercises.ipynb  21_tuples.ipynb  22_dictionaries.ipynb  23_ranges.ipynb  24_arrays.ipynb  27_broadcasting_and_dot_syntax.ipynb  28_sets.ipynb  34_conditional_evaluation.ipynb  35_short_circuit_evaluation.jl  37_while_loops.ipynb  37_while_loops.jl  39_comprehensions.ipynb  45_variable_number_of_arguments.ipynb  56_constructors.ipynb  Manifest.toml  Project.toml  README.md  char_string.jl  complex_rational.jl  input.txt  input_file.txt  quiz_2_data_structures_quix.ipynb  variables.jl
Julia/section_10_streams_and_networking/: 67_file_input_and_output.ipynb  68_tcp_ip.ipynb
Julia/section_11_parallel_programming/: 70_asynchronous_programming.ipynb  71_multi_threaded_programming.ipynb
Julia/section_3_variables_data_types_and_operations/: 11type_hierarchy.jl  12integer_float.jl  16ParametricTypes.ipynb
Julia/section_4_data_structures/: 25_vectors_and_matrices.ipynb  26_multidimensional_arrays.ipynb  29_basic_linear_algebra.ipynb
ModernReinforcementLearningActorCriticAlgorithms/: README.md  requirements.txt
PyBullet/: .gitmodules  README.md  tutorial_1_setup_simulation.py  tutorial_2_fixed_robot_base.py  tutorial_3_test_ik.py
Python/: functools_partial_dictionary_of_function_with_parameters.ipynb
PythonCookbook/: 1_data_structures_and_algorithms.ipynb  4_iterators_and_generators.ipynb
Pytorch/: make_your_first_gan_with_pytorch.ipynb  transformer.py
ROS/: Dockerfile  README.md  build_docker.sh  moveit_tutorial.rviz  run_docker.sh
ROS2/: README.md
ROS2/ros1_to_ros2_migration/src/ros1_ws/my_robot_bringup/: package.xml
ROS2/ros1_to_ros2_migration/src/ros1_ws/my_robot_bringup/launch/: number_app.launch
ROS2/ros1_to_ros2_migration/src/ros1_ws/ros1_app_cpp/: CMakeLists.txt  package.xml
ROSUltimateGuideForCustomRoboticArmAndPanda/: README.md
RobotHardware/: README.md
SystemsEngineering/: README.md
UI/: gradio.ipynb
cmake_tutorials/: README.md
cmake_tutorials/module6/: CMakeLists.txt
cmake_tutorials/module6/my_math/: CMakeLists.txt
cmake_tutorials/module6/my_print/: CMakeLists.txt
cpp/: pointers_1.cpp
data_science/: numpy.ipynb
itertools_python/: itertools_module.ipynb
learn_jekyll/: _config.yml  blog.html
learn_math_by_coding_in_python/: Calculus.ipynb  ConvexHull.ipynb  SympyAndLatex.ipynb
learn_more_python/: exercise_1.txt  exercise_2.txt
learning_c/: Makefile  README.md  ex1.c  ex11.c  ex3.c  ex8.c
learning_cpp/: getters_and_setters.cpp  inheritance.cpp  object_functions.cpp
learning_pybullet/: PybulletQuickStart.ipynb
learning_python_for_financial_analysis/: Python Refresher.ipynb
learning_qiskit/: .gitignore  Bernstein-Vazirani Algorithm.ipynb  Learning Qiskit.ipynb  Quantum Teleportation Algorithm.ipynb  README.md  requirements.txt
learning_ros2/ros1_to_ros2_migration/src/ros1_ws/my_robot_msgs/: CMakeLists.txt
learning_ros2/ros1_to_ros2_migration/src/ros1_ws/ros1_app_cpp/: CMakeLists.txt
learning_ros2/ros1_to_ros2_migration/src/ros1_ws/ros1_app_cpp/src/: number_counter.cpp  number_publisher.cpp  oop_number_counter.cpp
learning_rust/: .gitignore  README.md  add1.rs  add2.rs  add3.rs  array1.rs  array2.rs  array3.rs  for2.rs  fun1.rs  fun2.rs  hello_world.rs  let1.rs  let2.rs  slice1.rs  slice2.rs  vec1.rs
opencv_cpp/: chapter1.cpp
pybullet_basics_tutorial_for_robotics/: tutorial_3_test_ik.py
regex_python/: regex.ipynb
reinforcement_learning_tutorials/: README.md  q_learning_1.py  q_learning_4.py
windows_games/: ClashOfClans.xml  clash_of_clans_grab_screen.ipynb  clash_of_clans_resource_farming.py  coc_resource_collector.py  game_automator.py  grab_screen.py  open_window.py  resize_window.py  test_game_automator.py  vision_processor.py
(+346 files in other folders)
