<?xml version="1.0"?>
<package format="2">
  <name>ros1_app_cpp</name>
  <version>0.0.0</version>
  <description>The ros1_app_cpp package</description>
  <maintainer email="ed@todo.todo">ed</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>my_robot_msgs</depend>

  <export>

  </export>
</package>
